// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shoud renders for "linux" correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.linux
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        Object {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <Link
      className="button"
      onlyActiveOnIndex={false}
      style={Object {}}
      target="_blank"
      to="/documentation/analysis/scan/sonarscanner/"
    >
      download_verb
    </Link>
  </p>
</div>
`;

exports[`Shoud renders for "mac" correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.mac
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        Object {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            PATH
          </code>,
        }
      }
    />
  </p>
  <p>
    <Link
      className="button"
      onlyActiveOnIndex={false}
      style={Object {}}
      target="_blank"
      to="/documentation/analysis/scan/sonarscanner/"
    >
      download_verb
    </Link>
  </p>
</div>
`;

exports[`Shoud renders for "win" correctly 1`] = `
<div>
  <h4
    className="spacer-bottom"
  >
    onboarding.analysis.sq_scanner.header.win
  </h4>
  <p
    className="spacer-bottom markdown"
  >
    <FormattedMessage
      defaultMessage="onboarding.analysis.sq_scanner.text"
      id="onboarding.analysis.sq_scanner.text"
      values={
        Object {
          "dir": <code>
            bin
          </code>,
          "env_var": <code>
            %PATH%
          </code>,
        }
      }
    />
  </p>
  <p>
    <Link
      className="button"
      onlyActiveOnIndex={false}
      style={Object {}}
      target="_blank"
      to="/documentation/analysis/scan/sonarscanner/"
    >
      download_verb
    </Link>
  </p>
</div>
`;
